--- a/Frontend/src/designs/css/main.css
+++ b/Frontend/src/designs/css/main.css
@@ -13,6 +13,12 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  flex: auto;
+}
+
 .main {
   flex: 1;
 }
