--- a/Frontend/src/designs/css/main.css
+++ b/Frontend/src/designs/css/main.css
@@ -82,7 +82,7 @@ body {
 }
 
 .hero {
-  background-image: url('../img/bank-tree.jpeg');
+  background-image: url('../img/bank-tree.webp');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -262,12 +262,24 @@ body {
   flex: 1;
 }
 
+.input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.edit-container {
+  margin: 10px;
+}
 .edit-button {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
   font-weight: bold;
   padding: 10px;
+  margin-right: 15px;
 }
 
 .header {
